@@ -3,18 +3,19 @@ PG2|POINT(0 4095)
 PG3|POINT(2 4092)
 PG4|MULTIPOLYGON(((5 4096,10 4091,10 4096,5 4096)),((5 4096,0 4101,0 4096,5 4096)))
 PG5|
-PG6|POLYGON((894 2704,600 594,2791 594,894 2704))
+PG6|POLYGON((2791 594,894 2704,600 594,2791 594))
 PG7|POLYGON((1252 1904,1253 1905,1253 1906,1251 1904,1252 1904))
 PG8|MULTIPOLYGON(((5 4096,10 4091,10 4096,5 4096)),((5 4096,0 4101,0 4096,5 4096)))
-PG9|POLYGON((0 4096,0 0,4096 0,4096 4096,0 4096))
+PG9|16777216
+PG9.1|2|12.5|f
 PG10|
-PG11|POLYGON((0 10,0 0,10 0,10 10,0 10))
+PG11|POLYGON((10 0,10 10,0 10,0 0,10 0))
 PG12|POLYGON((0 10,0 0,10 0,10 10,0 10))
-PG13|POLYGON((0 10,0 0,10 0,10 10,0 10),(1 9,9 9,9 1,1 1,1 9))
-PG14|POLYGON((0 10,0 0,10 0,10 10,0 10),(1 9,9 9,9 1,1 1,1 9))
-PG15|POLYGON((0 10,0 0,10 0,10 10,0 10),(1 9,9 9,9 1,1 1,1 9))
-PG16|POLYGON((0 10,0 0,10 0,10 10,0 10),(1 9,9 9,9 1,1 1,1 9))
-PG17|MULTIPOLYGON(((0 10,0 0,10 0,10 10,0 10),(1 9,9 9,9 1,1 1,1 9)),((2 8,2 2,8 2,8 8,2 8),(3 7,7 7,7 3,3 3,3 7)))
+PG13|POLYGON((10 0,10 10,0 10,0 0,10 0),(9 1,1 1,1 9,9 9,9 1))
+PG14|POLYGON((10 0,10 10,0 10,0 0,10 0),(1 9,9 9,9 1,1 1,1 9))
+PG15|POLYGON((0 10,0 0,10 0,10 10,0 10),(9 1,1 1,1 9,9 9,9 1))
+PG16|POLYGON((0 10,0 0,10 0,10 10,0 10),(9 1,1 1,1 9,9 9,9 1))
+PG17|56
 PG18|MULTIPOINT(1 9,3 8)
 PG19|MULTIPOINT(25 4079,26 4078)
 PG20|POINT(10 4086)
@@ -36,26 +37,44 @@ PG35|POINT(4352 4352)
 PG36|
 PG37|
 PG38|
-PG39 - ON |POLYGON((0 0,10 0,9 2,10 2,10 10,0 10,0 0))
-PG39 - OFF|POLYGON((0 0,10 0,9 2,10 2,10 10,0 10,0 0))
+PG39 - ON |POLYGON((10 0,9 2,10 2,10 10,0 10,0 0,10 0))
+PG39 - OFF|POLYGON((10 0,9 2,10 2,10 10,0 10,0 0,10 0))
 PG40 - ON |LINESTRING(0 10,0 0)
 PG40 - OFF|LINESTRING(0 10,0 0)
 PG41 - ON |LINESTRING(0 10,0 4,0 2,0 0,1 0)
 PG41 - OFF|LINESTRING(0 10,0 4,0 2,0 0,1 0)
 PG42 - ON |LINESTRING(0 10,0 0,1 0)
 PG42 - OFF|LINESTRING(0 10,0 0,1 0)
-PG43 - ON |MULTIPOLYGON(((5 5,0 0,10 0,5 5)),((0 10,5 5,10 10,0 10)))
+PG43 - ON |MULTIPOLYGON(((5 5,0 0,10 0,5 5)),((5 5,10 10,0 10,5 5)))
 PG43 - OFF|MULTIPOLYGON(((5 5,-1 -1,11 -1,5 5)),((5 5,11 11,-1 11,5 5)))
 PG44|
 PG45|
-PG46|SRID=3857;POLYGON((3245 2224,3262 2030,3253 2158,3245 2224))
+PG46|SRID=3857;POLYGON((3262 2030,3253 2158,3245 2224,3262 2030))
+PG47|
+PG48|
+PG49|
+PG50|
+PG51|10000
+PG52|8000
+PG53|600
+PG54|
+PG55|
+PG56|
+PG57|POLYGON((0 1,0 0,100 0,100 100,0 100,0 1))
+PG58|POLYGON((0 100,0 90,10 90,10 100,0 100))
+PG59|POLYGON((0 100,0 90,10 90,10 100,0 100))
+PG60|POLYGON((0 100,0 90,10 90,10 100,0 100))
+PG61|
+PG62|POLYGON((0 100,0 90,10 90,10 100,0 100))
+PG63|POLYGON((90 0,100 0,100 10,90 10,90 0))
+PG64|
 TG1|GiEKBHRlc3QSDBICAAAYASIECTLePxoCYzEiAigBKIAgeAI=
 TG2|GiMKBHRlc3QSDhICAAAYASIGETLePwIBGgJjMSICKAEogCB4Ag==
 TG3|GiYKBHRlc3QSERICAAAYAiIJCQCAQArQD88PGgJjMSICKAEogCB4Ag==
 TG4|GiYKBHRlc3QSERICAAAYAiIJCQCAQArQD88PGgJjMSICKAEogCB4Ag==
 TG5|GjAKBHRlc3QSGxICAAAYAiITCQL+PwrQD88PCc0Pzg8K0A/PDxoCYzEiAigBKIAgeAI=
-TG6|GjIKBHRlc3QSHRICAAAYAyIVCUbsPxoxEwonPAkPCTEeEhQUCh0PGgJjMSICKAEogCB4Ag==
-TG7|Gj0KBHRlc3QSKBICAAAYAyIgCVCwPxIKFDEdDwkAFCIyHh0eJwkAJw8JKBQSEwkAFA8aAmMxIgIo
+TG6|GjIKBHRlc3QSHRICAAAYAyIVCVqmPxoTRjETCicPCSgKEh0KFBQPGgJjMSICKAEogCB4Ag==
+TG7|Gj0KBHRlc3QSKBICAAAYAyIgCSi6PyIyHh0eJwkAJw8JFAoSABQUCQ8JEzESKAoKFA8aAmMxIgIo
 ASiAIHgC
 TG8|GiEKBHRlc3QSDBICAAAYASIECTLePxoCYzEiAigBKIAgeAI=
 TG9|GiMKBHRlc3QSDhICAAAYASIGETLeP2VGGgJjMSICKAEogCB4Ag==
@@ -98,4 +117,4 @@ D7|POINT(1 4094)
 TU2
 ERROR:  pgis_asmvt_transfn: parameter row cannot be other than a rowtype
 TU3|
-#3922|POLYGON((2613 3664,2615 3662,2616 3662,2617 3665,2615 3665,2615 3664,2613 3664))
+#3922|6.5
